--- a/index.html
+++ b/index.html
@@ -651,15 +651,10 @@
             <div class="contact-mf">
               <div id="contact" class="box-shadow-full">
                 <div class="row">
-                  <div class="col-md-6">
-                    <div class="title-box-2">
+                  <div class="col-md-12">
+                    <div class="title-box-2 pt-4 pt-md-0">
                       <h5 class="title-left">
-                      </div>
-                      </form>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                        Get in Touch
+                        Entre em contato
                       </h5>
                     </div>
                     <div class="more-info">
