--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
                         mollitia inventore?
                       </p>
                       <ul class="list-ico">
-                        <li><span class="bi bi-phone"></span>+5511979671599</li>
+                        <li><span class="bi bi-phone"><a href="https://api.whatsapp.com/send?phone=5511979671599" class="float" target="_blank"></span>+5511979671599</li>
                         <li><span class="bi bi-envelope"></span>silva.gustavo@hotmail.com.br</li>
                       </ul>
                     </div>
