--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
                         mollitia inventore?
                       </p>
                       <ul class="list-ico">
-                        <li><span class="bi bi-phone"><a href="https://api.whatsapp.com/send?phone=5511979671599" class="float" target="_blank"></a></span>+5511979671599</li>
+                        <li><span class="bi bi-whatsapp"><a href="https://api.whatsapp.com/send?phone=5511979671599" class="float" target="_blank"></a></span>+5511979671599</li>
                         <li><span class="bi bi-envelope"><a href="mailto:silva.gustavo@hotmail.com.br?Subject=CONTATO&Body=Estou%20entrando%20em%20contato%20atrav%E9s%20do%20site">linkText</a>                          </span>silva.gustavo@hotmail.com.br</li>
                       </ul>
                     </div>
