--- a/index.html
+++ b/index.html
@@ -665,9 +665,8 @@
                         mollitia inventore?
                       </p>
                       <ul class="list-ico">
-                        <li><span class="bi bi-whatsapp"><a href="https://api.whatsapp.com/send?phone=5511979671599" class="hasTooltip" data-placement="bottom" title="Clique para enviar uma mensagem" target="_blank">
-11 97967.1599</a></span>+5511979671599</li>
-                        <li><span class="bi bi-envelope"><a href="mailto:silva.gustavo@hotmail.com.br?Subject=CONTATO&Body=Estou%20entrando%20em%20contato%20atrav%E9s%20do%20site"></a>                          </span>silva.gustavo@hotmail.com.br</li>
+                        <li><span class="bi bi-whatsapp"><a href="https://api.whatsapp.com/send?phone=5511979671599" class="hasTooltip" data-placement="bottom" title="Clique para enviar uma mensagem" target="_blank">11 97967.1599</a></span></li>
+                        <li><span class="bi bi-envelope"><a href="mailto:silva.gustavo@hotmail.com.br" class="hasTooltip" data-placement="bottom" title="Clique para escrever uma mensagem" target="_blank"> silva.gustavo@hotmail.com.br</a></span></li>
                       </ul>
                     </div>
                     <div class="socials">
