--- a/index.html
+++ b/index.html
@@ -654,16 +654,14 @@
                   <div class="col-md-12">
                     <div class="title-box-2 pt-4 pt-md-0">
                       <h5 class="title-left">
-                        Entre em contato
+                        ENVIE SUA MENSAGEM
                       </h5>
                     </div>
                     <div class="more-info">
                       <p class="lead">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
-                        expedita aperiam aliquid at.
-                        Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                        mollitia inventore?
-                      </p>
+                        Para entrar em contato, basta clicar no telefone abaixo que irá abrir uma conversa no seu aplicativo de WhatsApp.
+                        Caso desejar, também é possível enviar um e-mail.
+                        </p>
                       <ul class="list-ico">
                         <li><span class="bi bi-whatsapp"><a href="https://api.whatsapp.com/send?phone=5511979671599" class="hasTooltip" data-placement="bottom" title="Clique para enviar uma mensagem" target="_blank">11 97967.1599</a></span></li>
                         <li><span class="bi bi-envelope-at"><a href="mailto:silva.gustavo@hotmail.com.br" class="hasTooltip" data-placement="bottom" title="Clique para escrever uma mensagem" target="_blank"> silva.gustavo@hotmail.com.br</a></span></li>
