--- a/index.html
+++ b/index.html
@@ -669,10 +669,10 @@
                     </div>
                     <div class="socials">
                       <ul>
-                        <li><a href=""><i class="bi bi-facebook"></i></span></a></li>
-                        <li><a href=""><i class="bi bi-instagram"></i></span></a></li>
-                        <li><a href=""><i class="bi bi-twitter"></i></span></a></li>
-                        <li><a href=""><i class="bi bi-linkedin"></i></span></a></li>
+                        <li><a href=""><i class="bi bi-facebook"></i></span></a></li>&nbsp;&nbsp;&nbsp;&nbsp;
+                        <li><a href=""><i class="bi bi-instagram"></i></span></a></li>&nbsp;&nbsp;&nbsp;&nbsp;
+                        <li><a href=""><i class="bi bi-twitter"></i></span></a></li>&nbsp;&nbsp;&nbsp;&nbsp;
+                        <li><a href=""><i class="bi bi-linkedin"></i></span></a></li>&nbsp;&nbsp;&nbsp;&nbsp;
                       </ul>
                     </div>
                   </div>
